Attempt to fix scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     z-index: -2;
 }
 
